fix display when a route has many legs, overflows
this still doesn't look great, but makes it usable

--- a/src/components/RoutesOverview.css
+++ b/src/components/RoutesOverview.css
@@ -26,12 +26,14 @@
 
 .RoutesOverview_timeEstimate {
   align-self: center;
+  flex-shrink: 0;
 }
 
 .RoutesOverview_routeLegs {
   padding-left: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .RoutesOverview_leg,
